[tool.poetry]
name = "tracker"
version = "0.1.0"
description = ""
authors = ["Rohan Dsouza <rohan.dsouza.7076@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
flask = "^3.0.3"
requests = "^2.32.3"
lxml = "^5.2.2"
bs4 = "^0.0.2"
redis = {extras = ["hiredis"], version = "^5.0.7"}
price-parser = "^0.3.4"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
